# agile-llm-arena

./: .gitignore  BUILDING.md  CMAKE_SETUP.md  QUICK_REFERENCE.md  README.md  SAFETY.md  TEMPLATE_PROJECTS.md  __init__.py  build.sh  build_utils.py  config.yaml  mcp_server.py  mutation.py  pyproject.toml  reference_implementations.py  runner.py  template_projects.py
projects/pid_controller/: CMakeLists.txt  __init__.py  mull.yml
projects/pid_controller/src/: pid.c  pid.h
projects/pid_controller/test/: test_pid.c  test_pid.cc
projects/uart_driver/: CMakeLists.txt  __init__.py  mull.yml
projects/uart_driver/src/: uart_frame.c  uart_frame.h
projects/uart_driver/test/: test_uart_frame.c  test_uart_frame.cc
providers/: __init__.py  anthropic.py  base.py  claude_code.py  ollama.py  openai_compat.py  openrouter.py
skills/: __init__.py  bash.py  read.py  run_mutation.py  run_tests.py  write.py
tests/: conftest.py  test_mcp.py  test_project_build.py  test_providers.py  test_skills.py  test_workflows.py
workflows/: __init__.py  base.py  impl_first.py  iterative.py  mutation_aware.py  tdd.py
