[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-llm-arena"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.14",
    "pyyaml>=6.0",
    "mutmut>=2.4",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "providers*", "workflows*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["skills", "providers", "workflows"]
omit = ["tests/*"]
